# plan-b

./: Cargo.toml  README.md  Rocket.toml  groups  project.config
cmdline/: Cargo.toml
cmdline/src/: main.rs
docs/: reqs.md  vision.md
fetch-map/: fetch-map.py
plan_b/: Cargo.toml
plan_b/src/: lib.rs  map.rs  search.rs
src/: lib.rs
web/: Cargo.toml
web/src/: main.rs
web/static/: plan-b.html
