# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "cmdline"
version = "0.1.1"
authors = ["Po Huit <eve.po.huit@gmail.com>"]
edition = "2018"

[dependencies]
plan_b = {path = "../plan_b"}
structopt = "0"

[[bin]]
name = "plan-b"
path = "src/main.rs"
