# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "plan_b"
version = "0.1.1"
authors = ["Po Huit <eve.po.huit@gmail.com>"]
edition = "2018"

[dependencies]
libflate = "0"
serde = "1"
serde_json = "1"
serde_derive = "1"
ndarray = "0"
