# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "web"
version = "0.1.1"
authors = ["Po Huit <eve.po.huit@gmail.com>"]
edition = "2018"

[dependencies]
plan_b = {path = "../plan_b"}

[dependencies.rocket]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[[bin]]
name = "plan-b-web"
path = "src/main.rs"
