# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "web"
version = "0.1.1"
authors = ["Po Huit <eve.po.huit@gmail.com>"]
edition = "2018"

[dependencies]
axum = "0.6.1"

[dependencies.plan_b]
path = "../plan_b"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[[bin]]
name = "plan-b-web"
path = "src/main.rs"
