# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "web"
version = "0.1.2"
authors = ["Po Huit <eve.po.huit@gmail.com>"]
edition = "2021"

[dependencies]
plan_b = {path = "../plan_b"}
rocket = "0.5"
rocket_codegen = "0.5"

[[bin]]
name = "plan-b-web"
path = "src/main.rs"
